Use routers and viewsets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "authtoken",
         "bloggy",
         "corsheaders",
-        "socialaccount"
+        "socialaccount",
+        "viewsets"
     ]
 }
